summative.moria.Moria.scala.code
do{
  var x:Int = getX()
  var y:Int = getY()
  if(!estSurBiscuit())
  	setPos(x + 1, y)
  else {
    prendBiscuit()
    setPos(x - 1, y)
    if(estSurBiscuit()) {
  		setPos(x + 1,y)
      poseBiscuit()
  	}
  }
} while(x != 18)

var y:Int = getY()
setPos(19, y + 1)